--- a/busybox-odr/busybox-pvc.yaml
+++ b/busybox-odr/busybox-pvc.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   accessModes:
   - ReadWriteOnce
-  storageClassName: ocs-storagecluster-ceph-rbd
+  storageClassName: gp3-csi
   resources:
     requests:
       storage: 5Gi
